[build-system]
requires = ["poetry-core==2.1.3"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "bewohner-app"
version = "0.1.0"
description = "Django-based resident communication and staff administration application."
authors = ["Hussein Ebrahimi <hosseinebi71@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"

django = "==5.2.8"
psycopg = { version = "==3.2.9", extras = ["binary"] }

pillow = "==11.0.0"
qrcode = "==8.0"

django-ckeditor = "==6.7.3"
django-admin-sortable2 = "==2.2.8"
django-extensions = "==3.2.3"

whitenoise = "==6.8.2"
bleach = "^6.3.0"
tinycss2 = "^1.5.1"
python-dotenv = "^1.2.2"
pywebpush = "2.0.3"
firebase-admin = "7.4.0"
reportlab = "^4.5.1"
openpyxl = "^3.1.5"

[tool.poetry.group.prod.dependencies]
gunicorn = { version = "==23.0.0", markers = "platform_system != 'Windows'" }

[tool.poetry.group.dev.dependencies]
pre-commit = "==4.0.1"
ruff = "==0.9.10"
black = "==25.1.0"
isort = "==5.13.2"
flake8 = "==7.1.2"
pytest = "==8.3.5"
pytest-django = "==4.9.0"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
py_version = 312

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
ignore = ["E501", "E402", "B007", "B905"]
select = ["E", "F", "UP", "B"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
